# rot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  consumer.cxx  consumer.hxx  main.cxx  main_temp.cxx  producer.cxx  producer.hxx
cmake/modules/: FindConcurrentQueue.cmake  FindConfiguru.cmake  Findmongocxx.cmake  Findspdlog.cmake
include/: AWSSetup.hxx  CMakeLists.txt  globals.hxx  producer.hxx  streamHandler.hxx
include/backends/: aws.hxx  mongodb.hxx
include/consumers/: consumer.hxx
include/producer/: kinesisDataFirehoseProducer.hxx  producer.hxx
include/utils/: logger.hxx  spdLogSystem.hxx
producer/: kinesisDataFirehose.hxx  producer.hxx
src/: AWSSetup.cxx  CMakeLists.txt  main.cxx  rot.cxx  streamHandler.cxx
src/backends/: CMakeLists.txt  aws.cxx  backend.cxx  mongodb.cxx
src/consumer/: CMakeLists.txt
src/producer/: CMakeLists.txt  kinesisDataFirehose.cxx  kinesisDataFirehoseProducer.cxx  producer.cxx  producer.hxx
src/utils/: CMakeLists.txt  logger.cxx  spdLogSystem.cxx
